--- a/src/Index.htm
+++ b/src/Index.htm
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <p><a href="../pages/quemSomos.html">Quem Somos?</a></p>
+    <p><a href="./pages/quemSomos.html">Quem Somos?</a></p>
 
 </body>
 </html>
