--- a/projeto/src/Index.html
+++ b/projeto/src/Index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <p><a href="./pages/quemSomos.html">Quem Somos?</a></p>
-
+    <center>
+    <h1>Vinharia</h1>
+    <p><a href="./pages/paginaPrincipal.html">Quer ir para a página principal ?</a></p>
+    </center>   
 </body>
 </html>
