--- a/projeto/src/Index.html
+++ b/projeto/src/Index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
 </head>
 <body>
     <center>
-    <h1>Vinharia</h1>
-    <p><a href="./pages/paginaPrincipal.html">Quer ir para a página principal ?</a></p>
+        <a href="./pages/paginaPrincipal.html"><img src="./imagens/logo.jpg" width="600px" height="600px"></a>
+        <h1><a href="./pages/paginaPrincipal.html"><font color="#5e2129">Vinheria Agnello</font></a></h1>
     </center>   
 </body>
 </html>
