--- a/projeto/src/pages/paginaPrincipal.html
+++ b/projeto/src/pages/paginaPrincipal.html
@@ -11,22 +11,24 @@
         <center>
             <img src="../imagens/logo.jpg" width="200px" height="200px">
         </center> 
+        
     </header>
+    
     <table align="left">
         <tr>
-            <td><a href="quemSomos.html"><font size="4" color="#000" face="helvetica">QUEM SOMOS</font></a></td>
+            <td><a href="quemSomos.html"><br><font size="4" color="#000" face="helvetica">QUEM SOMOS</font></br></a></td>
         </tr>
         <tr>
-            <td><a href="produtos.html"><font size="4" color="#000" face="helvetica">PRODUTOS</font></a></td>
+           <td><a href="produtos.html"><br><font size="4" color="#000" face="helvetica">PRODUTOS</font></br></a></td></tr>
         </tr>
         <tr>
-            <td><a href="lojaVirtual.html"><font size="4" color="#000" face="helvetica">LOJA VIRTUAL</font></a></td>
+            <td><a href="lojaVirtual.html"><br><font size="4" color="#000" face="helvetica">LOJA VIRTUAL</font></br></a></td>
         </tr>
         <tr>
-            <td><a href="endereco.html" target="_blank"><font size="4" color="#000" face="helvetica">ENDEREÇO</font></a></td>
+            <td><a href="endereco.html" target="_blank"><br><font size="4" color="#000" face="helvetica">ENDEREÇO</font></br></a></td>
         </tr>
         <tr>
-            <td><a href="contato.html"><font size="4" color="#000" face="helvetica">CONTATO</font></a></td>
+            <td><a href="contato.html"></br><font size="4" color="#000" face="helvetica">CONTATO</font></br></a></td>
         </tr>
     </table>
 
@@ -41,7 +43,7 @@
             <br>
             <p>
                 <hr>
-                <p><font color="grey">Vinheria Agnello</font></p>
+               <h5> <p><font color="grey" face="helvetica">Vinheria Agnello</font></p> </h5>
             </p>
         </center>
     </footer>
