--- a/projeto/src/pages/quemSomos.html
+++ b/projeto/src/pages/quemSomos.html
@@ -16,37 +16,53 @@
 
     <center>
         <img src="../imagens/logo.jpg" width="150px" height="150px">
-        <p>
-            <br>A Vinheria Agnello iniciou suas atividades em São Paulo há mais de 15 anos, contando com apenas uma loja física onde 
-            <br>coloca à disposição do mercado uma vasta gama de rótulos de vinícolas nacionais e internacionais.
-            <br>A Vinheria Agnello é uma empresa familiar, dirigida pelo proprietário Giulio e sua filha Bianca, que atua há mais de 15 
-            <br>anos com apenas uma loja física, que emprega mais 6 funcionários, entre a administração, estoques e vendas.
-            <br>A empresa já utiliza um pequeno ERP para gestão financeira, compras, controle de estoques e registro de vendas (PDV), mas até 
-            <br>agora resistiu à ideia de trabalhar com loja virtual por primar pelo atendimento especializado e personalizado.
-            <br>Tanto os proprietários quanto seus 3 vendedores são profundos conhecedores do mundo dos vinhos, e usam esse conhecimento no atendimento 
-            <br>dos clientes, que sempre demandam informações, recomendações e dicas. Essa troca de conhecimento, com cara de consultoria, é um dos pontos fortes da vinheria.
+        <p> <font face="helvetica">
+            <br><b>A VINHERIA</b>
+            <br>
+            <br>A <b>Vinheria Agnello</b> é uma empresa familiar que iniciou suas atividades em São Paulo há mais de 15 anos, 
+            <br>contando com apenas uma loja física onde coloca à disposição do mercado uma vasta gama de rótulos de
+            <br>vinícolas nacionais e internacionais. Tanto os proprietários quanto seus 3 vendedores são profundos conhece- 
+            <br>dores do mundo dos vinhos, e usam esse conhecimento no atendimento dos clientes, que sempre demandam
+            <br>informações, recomendações e dicas. Essa troca de conhecimento, com cara de consultoria, é um dos pontos
+            <br>fortes da vinheria.</font>
         </p>
         <img src="../imagens/vinhosDiversos.jpg" width="400px" heigh="600">
-        <p>
-            <br>O mundo dos vinhos é bastante vasto e diverso, o que torna bastante difícil a tomada de decisão na hora da compra e da forma de consumo para a maioria do público consumidor.
-            <br>São cerca de 6.000 variedades de uvas viníferas no mundo, que adquirem características e sabores diferentes de acordo com a região, o clima, o solo e os cuidados em 
-            <br>seu cultivo, sem contar com as diferentes técnicas de colheita, fermentação, processamento e armazenagem, que levam à produção de uma infinidade de vinhos capazes de atender aos paladares mais diversos. E tudo isso pode mudar a cada safra, cada ano de produção.
-            <br>É impossível, portanto, que alguém possa conhecer ou experimentar todos os vinhos disponíveis no mercado, mas combinando estudo, leituras, visitações, trocas de informações e degustação frequente é possível maximizar as chances de escolha de um vinho que agrade 
-            <br>seu paladar, ou ao menos minimizar as chances de cometer grandes erros na seleção de um vinho. O resto fica por conta da experimentação, da ocasião do consumo, da boa companhia.
-            <br>Uma das particularidades relevantes dos vinhos é o risco de sua degradação, ou ao menos alteração de suas características de coloração, aromas e sabor, caso sejam mal armazenados, expostos por muito tempo à luz natural, temperaturas altas, ou mesmo quando expostos 
-            <br>a vibrações ou movimentações constantes.
-            <br>Conhecedora desses riscos, a Vinheria Agnello adota cuidados especiais na armazenagem de seus vinhos, em especial com os vinhos de maior valor e vinhos raros, buscando assim garantir a seus clientes mais exigentes a qualidade original de cada garrafa, como recebida
-            <br> de seus fornecedores ou mesmo das vinícolas de origem.
+        <p><font face="helvetica">
+            <br><b>O MUNDO DOS VINHOS</b>
+            <br>
+            <br>O mundo dos vinhos é bastante vasto e diverso, o que torna bastante difícil a tomada de decisão na hora da compra e da forma de
+            <br>consumo para a maioria do público consumidor. São cerca de 6.000 variedades de uvas viníferas no mundo, que adquirem carac- 
+            <br>terísticas e sabores diferentes de acordo com a região, o clima, o solo e os cuidados em seu cultivo, sem contar com as diferentes
+            <br>técnicas de colheita, fermentação, processamento e armazenagem, que levam à produção de uma infinidade de vinhos capazes de
+            <br>atender aos paladares mais diversos. E tudo isso pode mudar a cada safra, cada ano de produção. É impossível, portanto, que alguém 
+            <br>possa conhecer ou experimentar todos os vinhos disponíveis no mercado, mas combinando estudo, leituras, visitações, trocas de 
+            <br>informações e degustação frequente é possível maximizar as chances de escolha de um vinho que agrade seu paladar, ou ao menos
+            <br>minimizar as chances de cometer grandes erros na seleção de um vinho. O resto fica por conta da experimentação, da ocasião do
+            <br>consumo, da boa companhia. 
+            <br>
+            <br>
+            <br><b>ARMAZENAGEM CONTROLADA</b>
+            <br>
+            <br>Uma das particularidades relevantes dos vinhos é o risco de sua degradação, ou ao menos alteração de suas características de 
+            <br>coloração, aromas e sabor, caso sejam mal armazenados, expostos por muito tempo à luz natural, temperaturas altas, ou mesmo 
+            <br>quando expostos a vibrações ou movimentações constantes. Conhecedora desses riscos, a <b>Vinheria Agnello</b> adota cuidados especiais
+            <br>na armazenagem de seus vinhos, em especial com os vinhos de maior valor e vinhos raros, buscando assim garantir a seus clientes
+            <br>mais exigentes a qualidade original de cada garrafa, como recebida de seus fornecedores ou mesmo das vinícolas de origem. </font>
         </p>
 
         <img src="../imagens/fotoProfissionalVinhos.jpg" width="400px" height="250px">
 
-        <p>
-            <br>Apesar de atender muitos clientes conhecedores de vinho, que compram com frequência e que desenvolvem constantemente seu paladar e seus conhecimentos, a grande maioria do público consumidor que frequenta a Vinheria Agnello é formada por pessoas com pouco conhecimento ou 
-            <br>ainda principiantes no mundo do vinho e que dependem de ajuda na hora de escolher um vinho.
-            <br>Qual o melhor vinho para acompanhar um almoço de família? E se eu estiver recebendo visitas para o jantar? Qual a melhor opção se o cardápio inclui um risoto suave, um carré de cordeiro...? Vinho branco, tinto, espumante? Seco, doce, semisseco, fortificado...?
-            <br>É por essa razão que a orientação dos vendedores e o atendimento personalizado fazem a diferença.
-        
+        <p><font face="helvetica">
+            <br><b>CLIENTES</b>
+            <br>
+            <br>Apesar de atender muitos clientes conhecedores de vinho, que compram com frequência e que desenvolvem constantemente seu 
+            <br>paladar e seus conhecimentos, a grande maioria do público consumidor que frequenta a <b>Vinheria Agnello</b> é formada por pessoas com
+            <br>pouco conhecimento ou ainda principiantes no mundo do vinho e que dependem de ajuda na hora de escolher um vinho.
+            <br>Qual o melhor vinho para acompanhar um almoço de família? E se eu estiver recebendo visitas para o jantar? Qual a melhor opção se
+            <br>o cardápio inclui um risoto suave, um carré de cordeiro...? Vinho branco, tinto, espumante? Seco, doce, semisseco, fortificado...?                   
+            <br>
+            <br>É por essa razão que a orientação dos vendedores e o atendimento personalizado fazem a diferença.
+        </font>
         </p>
     </center>
 
