--- a/projeto/src/pages/produtos.html
+++ b/projeto/src/pages/produtos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pr-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,6 +19,43 @@
             <img src="../imagens/logo.jpg" width="150px" height="150px">
         </center> 
     </header>
+    <center>
+        <table border="1">
+            <tr>
+                <td>
+                    <center>
+                        Vinhos Tintos
+                    </center>
+                    <img src="../imagens/tinto.jpeg" width="400px" height="400px">
+                </td>
+                <td>
+                    Abrir um vinho é muito mais do que simlesmente "abrir um vinho", é abrir um bom momento. Sozinho, com uma taça, paramos para refletir e encontrar aconchego em nós mesmos. Acompanhado de um amor, nos abrimos para os sentimentos. Acompanhado de um amigo, uma conversa vira uma análise. Mas se for uma roda de amigos, com vinhos e taças, um breve momento se torna uma linda memória.
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <center>
+                        Vinhos Tintos
+                    </center>
+                    <img src="../imagens/brancos.jpeg" width="400px" height="400px">
+                </td>
+                <td>
+                    Abrir um vinho é muito mais do que simlesmente "abrir um vinho", é abrir um bom momento. Sozinho, com uma taça, paramos para refletir e encontrar aconchego em nós mesmos. Acompanhado de um amor, nos abrimos para os sentimentos. Acompanhado de um amigo, uma conversa vira uma análise. Mas se for uma roda de amigos, com vinhos e taças, um breve momento se torna uma linda memória.
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <center>
+                        Vinhos Tintos
+                    </center>
+                    <img src="../imagens/espumantes.jpg" width="400px" height="400px">
+                </td>
+                <td>
+                    Abrir um vinho é muito mais do que simlesmente "abrir um vinho", é abrir um bom momento. Sozinho, com uma taça, paramos para refletir e encontrar aconchego em nós mesmos. Acompanhado de um amor, nos abrimos para os sentimentos. Acompanhado de um amigo, uma conversa vira uma análise. Mas se for uma roda de amigos, com vinhos e taças, um breve momento se torna uma linda memória.
+                </td>
+            </tr>
+        </table>
+    </center>
 
 
     <footer>
@@ -32,6 +69,5 @@
             </p>
         </center>
     </footer>
-
 </body>
 </html>
