--- a/projeto/src/pages/produtos.html
+++ b/projeto/src/pages/produtos.html
@@ -24,34 +24,74 @@
             <tr>
                 <td>
                     <center>
-                        Vinhos Tintos
+                        <font face="athelas"><b>VINHOS TINTOS</b></font>
                     </center>
                     <img src="../imagens/tinto.jpeg" width="400px" height="400px">
                 </td>
                 <td>
-                    Abrir um vinho é muito mais do que simlesmente "abrir um vinho", é abrir um bom momento. Sozinho, com uma taça, paramos para refletir e encontrar aconchego em nós mesmos. Acompanhado de um amor, nos abrimos para os sentimentos. Acompanhado de um amigo, uma conversa vira uma análise. Mas se for uma roda de amigos, com vinhos e taças, um breve momento se torna uma linda memória.
+                <center>
+                    <font face="athelas">
+                    <br>Seco
+                    <br>
+                    <br>Meio Seco
+                    <br>
+                    <br>Suave
+                    <br>
+                    <br>Licoroso
+                    <br>
+                    <br>países : BR / FR / IT / PT 
+                    </font>
+                </center>
                 </td>
             </tr>
             <tr>
                 <td>
                     <center>
-                        Vinhos Tintos
+                    <font face="athelas"><b>VINHOS BRANCOS</b></font>
                     </center>
                     <img src="../imagens/brancos.jpeg" width="400px" height="400px">
                 </td>
                 <td>
-                    Abrir um vinho é muito mais do que simlesmente "abrir um vinho", é abrir um bom momento. Sozinho, com uma taça, paramos para refletir e encontrar aconchego em nós mesmos. Acompanhado de um amor, nos abrimos para os sentimentos. Acompanhado de um amigo, uma conversa vira uma análise. Mas se for uma roda de amigos, com vinhos e taças, um breve momento se torna uma linda memória.
+                    <center>
+                        <font face="athelas">
+                        <br>Seco
+                        <br>
+                        <br>Meio Seco
+                        <br>
+                        <br>Suave
+                        <br>
+                        <br>Licoroso
+                        <br>
+                        <br>países : BR / FR / IT / PT 
+                        </font>
+                    </center>
                 </td>
             </tr>
             <tr>
                 <td>
                     <center>
-                        Vinhos Tintos
+                    <font face="athelas"><b>ESPUMANTES</b></font>
                     </center>
                     <img src="../imagens/espumantes.jpg" width="400px" height="400px">
                 </td>
                 <td>
-                    Abrir um vinho é muito mais do que simlesmente "abrir um vinho", é abrir um bom momento. Sozinho, com uma taça, paramos para refletir e encontrar aconchego em nós mesmos. Acompanhado de um amor, nos abrimos para os sentimentos. Acompanhado de um amigo, uma conversa vira uma análise. Mas se for uma roda de amigos, com vinhos e taças, um breve momento se torna uma linda memória.
+                    <center>
+                        <font face="athelas">
+                        <br>Nature
+                        <br>
+                        <br>Extra Brut
+                        <br>
+                        <br>Brut
+                        <br>
+                        <br>Seco
+                        <br>
+                        <br>Meio seco
+                        <br>
+                        <br>Doce
+                        <br>
+                        <br>países : BR / FR / IT / PT 
+                        </font>
+                    </center>  
                 </td>
             </tr>
         </table>
@@ -65,7 +105,7 @@
             <br>
             <p>
                 <hr>
-               <h5> <p><font color="grey" face="helvetica">Vinheria Agnello</font></p> </h5>
+               <h5> <p><font color="grey" face="athelas">Vinheria Agnello</font></p> </h5>
             </p>
         </center>
     </footer>
