Atualização pag endereço

--- a/projeto/src/pages/endereco.html
+++ b/projeto/src/pages/endereco.html
@@ -21,7 +21,7 @@
     </header>
 <center>
     <div>
-        <img src="../imagens/Endereco.png" width="650px" height="500px">
+        <img src="../imagens/Endereco.jpg" width="750px" height="500px">
     </div>
 </center>
 
