atualização pag contato

--- a/projeto/src/pages/contato.html
+++ b/projeto/src/pages/contato.html
@@ -19,6 +19,37 @@
             <img src="../imagens/logo.jpg" width="180px" height="180px">
         </center> 
     </header>
+
+<center>
+    <font face = athelas>
+    <table>
+         <h3>FALE CONOSCO</h3>
+         Preencha para entrar em contato conosco
+    <br>    
+        <tr>
+             <br><td><b>Nome:</b></td>
+             <td><input type="text" name="Nome" size="60"></td>
+        </tr>
+        <tr>
+             <td><b>e-mail:</b></td>
+             <td><input type="text" name="e-mail" size="60"></td>
+        </tr>
+        <tr>
+             <td><b>Assunto:</b></td>
+             <td><input type="text" name="Assunto" size="60"></td>
+        </tr>     
+    </table>
+       <label><b>Menssagem:</b></label>
+       <textarea></textarea>
+       <br><button>Enviar</button>
+</font>
+</center>
+
+<br>
+<br>
+<br>
+<br>
+
 <center>
     <div>
         <table border="1">
@@ -27,9 +58,11 @@
                     <img src="../imagens/contato.jpeg" width="150px" height="150px">
                 </td>
                 <td>
+                <font face = athelas>
                     <h1>__Nome do cara da Silva Santos__</h1>
                     <h2 color="red">+55 11 940028922</h2>
                     <h2>caraDaSilveSantos@agnellovinhos.com.br</h2>
+                </font>
                 </td>
             </tr>
         </table>
@@ -43,7 +76,7 @@
             <br>
             <p>
                 <hr>
-               <h5> <p><font color="grey" face="helvetica">Vinheria Agnello</font></p> </h5>
+               <h5> <p><font color="grey" face="athelas">Vinheria Agnello</font></p> </h5>
             </p>
         </center>
     </footer>
