--- a/projeto/src/pages/contato.html
+++ b/projeto/src/pages/contato.html
@@ -59,9 +59,9 @@
                 </td>
                 <td>
                 <font face = athelas>
-                    <h1>__Nome do cara da Silva Santos__</h1>
+                    <h1>Giulio Agnello</h1>
                     <h2 color="red">+55 11 940028922</h2>
-                    <h2>caraDaSilveSantos@agnellovinhos.com.br</h2>
+                    <h2>giulio.agn@agnellovinhos.com.br</h2>
                 </font>
                 </td>
             </tr>
