--- a/projeto/src/pages/lojaVirtual.html
+++ b/projeto/src/pages/lojaVirtual.html
@@ -28,7 +28,7 @@
                     </center>
                 </td>
                 <td>
-                        <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho X</font>
+                        <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho x</font>
                         <br>
                         <font size="3" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbsp&nbspEm estoque</font>
                         <br>
