--- a/projeto/src/pages/endereco.html
+++ b/projeto/src/pages/endereco.html
@@ -32,7 +32,7 @@
             <br>
             <p>
                 <hr>
-               <h5> <p><font color="grey" face="helvetica">Vinheria Agnello</font></p> </h5>
+               <h5> <p><font color="grey" face="athelas">Vinheria Agnello</font></p> </h5>
             </p>
         </center>
     </footer>
