atualização loja virtual

--- a/projeto/src/pages/lojaVirtual.html
+++ b/projeto/src/pages/lojaVirtual.html
@@ -22,40 +22,41 @@
     <center>
         <table border="0" width="100%">
             <tr>
-                <td width="400px">
+                <td width="300px">
                     <center>
-                        <img src="../imagens/tinto.jpeg" width="400px" height="400px">
+                        <img src="../imagens/vinho1.jpeg" width="350px" height="350px">
                     </center>
                 </td>
+               
                 <td>
-                        <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho x</font>
+                        <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho Branco "La &nbsp&nbsp&nbspGarbaude"</font>
                         <br>
-                        <font size="3" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbsp&nbspEm estoque</font>
+                        <font size="2" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspEm estoque</font>
                         <br>
-                        <img src="../imagens/startsRating.jpeg" height="75px">
+                        <img src="../imagens/startsRating.jpeg" height="50px">
                         <br>
-                        <font size="3" color="#00000" face="helvetica">&nbsp&nbsp&nbspDe: R$ 100,00</font>
+                        <font size="2" color="#00000" face="helvetica">&nbsp&nbsp&nbspDe: R$ 190,00</font>
                         <br>
-                        <font size="4" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbspPor: R$ 89,00</font>
+                        <font size="4" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbspPor: R$ 149,00</font>
                         <br>
-                        <font size="2" color="#00000" face="helvetica">&nbsp&nbsp&nbsp&nbspA vista ou em até 3x sem juros</font>
+                        <font size="1" color="#00000" face="helvetica">&nbsp&nbsp&nbsp&nbspA vista ou em até 3x sem juros</font>
                         <br>
-                        <table border="10" bordercolor="white">
+                        <table border="30" bordercolor="white">
                             <tr>
                                 <td>
                                     <font size="4" color="#00000" face="helvetica">Sobre esse vinho</font>
                                     <ul>
                                         <li>
-                                            <font size="3" color="#00000" face="helvetica">Seco</font>
+                                            <font size="3" color="#00000" face="helvetica">Meio Seco</font>
                                         </li>
                                         <li>
-                                            <font size="3" color="#00000" face="helvetica">Notas de nozes</font>
+                                            <font size="3" color="#00000" face="helvetica">Aroma de acácia</font>
                                         </li>
                                         <li>
-                                            <font size="3" color="#00000" face="helvetica">Safra de 10 anos</font>
+                                            <font size="3" color="#00000" face="helvetica">Safra de 2010</font>
                                         </li>
                                         <li>
-                                            <font size="3" color="#00000" face="helvetica">etx</font>
+                                            <font size="3" color="#00000" face="helvetica">Região Rhône</font>
                                         </li>
                                     </ul>
                                 </td>
@@ -69,42 +70,90 @@
                             </tr>
                         </table>
                 </td>
+                <td width="300px">
+                    <center>
+                        <img src="../imagens/vinho2.jpeg" width="350px" height="350px">
+                    </center>
+                </td>
+                <td>
+                    <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho Tinto Le Ballon &nbsp&nbsp&nbspRouge</font>
+                    <br>
+                    <font size="2" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspEm estoque</font>
+                    <br>
+                    <img src="../imagens/startsRating.jpeg" height="50px">
+                    <br>
+                    <font size="2" color="#00000" face="helvetica">&nbsp&nbsp&nbspDe: R$ 155,00</font>
+                    <br>
+                    <font size="4" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbspPor: R$ 144,15</font>
+                    <br>
+                    <font size="1" color="#00000" face="helvetica">&nbsp&nbsp&nbsp&nbspA vista ou em até 3x sem juros</font>
+                    <br>
+                    <table border="30" bordercolor="white">
+                        <tr>
+                            <td>
+                                <font size="4" color="#00000" face="helvetica">Sobre esse vinho</font>
+                                <ul>
+                                    <li>
+                                        <font size="3" color="#00000" face="helvetica">Suave</font>
+                                    </li>
+                                    <li>
+                                        <font size="3" color="#00000" face="helvetica">Aroma de frutas vermelhas</font>
+                                    </li>
+                                    <li>
+                                        <font size="3" color="#00000" face="helvetica">Safra de 2020</font>
+                                    </li>
+                                    <li>
+                                        <font size="3" color="#00000" face="helvetica">Região Languedoc</font>
+                                    </li>
+                                </ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <button>
+                                    <font size="5" color="#007600" face="helvetica">Comprar</font>
+                                </button>
+                            </td>
+                        </tr>
+                    </table>
+            </td>
+
             </tr>
             <tr>
-                <td width="400px">
+                <td width="300px">
                     <center>
-                        <img src="../imagens/brancos.jpeg" width="400px" height="400px">
+                        <img src="../imagens/vinho3.jpeg" width="350px" height="350px">
                     </center>
                 </td>
                 <td>
-                        <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho Y</font>
+                        <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho Branco Le Ballon &nbsp&nbsp&nbspBlanc</font>
                         <br>
-                        <font size="3" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbsp&nbspEm estoque</font>
+                        <font size="2" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbsp&nbspEm estoque</font>
                         <br>
-                        <img src="../imagens/startsRating.jpeg" height="75px">
+                        <img src="../imagens/startsRating.jpeg" height="50px">
                         <br>
-                        <font size="3" color="#00000" face="helvetica">&nbsp&nbsp&nbspDe: R$ 100,00</font>
+                        <font size="2" color="#00000" face="helvetica">&nbsp&nbsp&nbspDe: R$ 155,00</font>
                         <br>
-                        <font size="4" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbspPor: R$ 89,00</font>
+                        <font size="4" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbspPor: R$ 144,15</font>
                         <br>
-                        <font size="2" color="#00000" face="helvetica">&nbsp&nbsp&nbsp&nbspA vista ou em até 3x sem juros</font>
+                        <font size="1" color="#00000" face="helvetica">&nbsp&nbsp&nbsp&nbspA vista ou em até 3x sem juros</font>
                         <br>
-                        <table border="10" bordercolor="white">
+                        <table border="30" bordercolor="white">
                             <tr>
                                 <td>
                                     <font size="4" color="#00000" face="helvetica">Sobre esse vinho</font>
                                     <ul>
                                         <li>
-                                            <font size="3" color="#00000" face="helvetica">Seco</font>
+                                            <font size="3" color="#00000" face="helvetica">Suave</font>
                                         </li>
                                         <li>
-                                            <font size="3" color="#00000" face="helvetica">Notas de nozes</font>
+                                            <font size="3" color="#00000" face="helvetica">Aroma de frutos brancos</font>
                                         </li>
                                         <li>
-                                            <font size="3" color="#00000" face="helvetica">Safra de 10 anos</font>
+                                            <font size="3" color="#00000" face="helvetica">Safra de 2021</font>
                                         </li>
                                         <li>
-                                            <font size="3" color="#00000" face="helvetica">etx</font>
+                                            <font size="3" color="#00000" face="helvetica">Região Languedoc</font>
                                         </li>
                                     </ul>
                                 </td>
@@ -118,25 +167,72 @@
                             </tr>
                         </table>
                 </td>
+                <td width="300px">
+                    <center>
+                        <img src="../imagens/vinho4.jpeg" width="400px" height="350px">
+                    </center>
+                </td>
+                <td>
+                    <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho Branco &nbsp&nbsp&nbspTraminer</font>
+                    <br>
+                    <font size="2" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspEm estoque</font>
+                    <br>
+                    <img src="../imagens/startsRating.jpeg" height="50px">
+                    <br>
+                    <font size="2" color="#00000" face="helvetica">&nbsp&nbsp&nbspDe: R$ 169,00</font>
+                    <br>
+                    <font size="4" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbspPor: R$ 159,00</font>
+                    <br>
+                    <font size="1" color="#00000" face="helvetica">&nbsp&nbsp&nbsp&nbspA vista ou em até 3x sem juros</font>
+                    <br>
+                    <table border="30" bordercolor="white">
+                        <tr>
+                            <td>
+                                <font size="4" color="#00000" face="helvetica">Sobre esse vinho</font>
+                                <ul>
+                                    <li>
+                                        <font size="3" color="#00000" face="helvetica">Suave</font>
+                                    </li>
+                                    <li>
+                                        <font size="3" color="#00000" face="helvetica">Aroma floral</font>
+                                    </li>
+                                    <li>
+                                        <font size="3" color="#00000" face="helvetica">Safra de 2020</font>
+                                    </li>
+                                    <li>
+                                        <font size="3" color="#00000" face="helvetica">Região Campos de Cima</font>
+                                    </li>
+                                </ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <button>
+                                    <font size="5" color="#007600" face="helvetica">Comprar</font>
+                                </button>
+                            </td>
+                        </tr>
+                    </table>
+            </td>
             </tr>
             <tr>
-                <td width="400px">
+                <td width="300px">
                     <center>
-                        <img src="../imagens/espumantes.jpg" width="400px" height="400px">
+                        <img src="../imagens/vinho5.jpeg" width="350px" height="350px">
                     </center>
                 </td>
                 <td>
-                        <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho Z</font>
+                        <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho Espumante "Nuit &nbsp&nbsp&nbspBoréale"</font>
                         <br>
-                        <font size="3" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbsp&nbspEm estoque</font>
+                        <font size="2" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspEm estoque</font>
                         <br>
-                        <img src="../imagens/startsRating.jpeg" height="75px">
+                        <img src="../imagens/startsRating.jpeg" height="50px">
                         <br>
-                        <font size="3" color="#00000" face="helvetica">&nbsp&nbsp&nbspDe: R$ 100,00</font>
+                        <font size="2" color="#00000" face="helvetica">&nbsp&nbsp&nbspDe: R$ 285,00</font>
                         <br>
-                        <font size="4" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbspPor: R$ 89,00</font>
+                        <font size="4" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbspPor: R$ 265,00</font>
                         <br>
-                        <font size="2" color="#00000" face="helvetica">&nbsp&nbsp&nbsp&nbspA vista ou em até 3x sem juros</font>
+                        <font size="1" color="#00000" face="helvetica">&nbsp&nbsp&nbsp&nbspA vista ou em até 3x sem juros</font>
                         <br>
                         <table border="10" bordercolor="white">
                             <tr>
@@ -144,16 +240,16 @@
                                     <font size="4" color="#00000" face="helvetica">Sobre esse vinho</font>
                                     <ul>
                                         <li>
-                                            <font size="3" color="#00000" face="helvetica">Seco</font>
+                                            <font size="3" color="#00000" face="helvetica">Brut</font>
                                         </li>
                                         <li>
-                                            <font size="3" color="#00000" face="helvetica">Notas de nozes</font>
+                                            <font size="3" color="#00000" face="helvetica">Aroma de pêra, maçã e pêssego</font>
                                         </li>
                                         <li>
-                                            <font size="3" color="#00000" face="helvetica">Safra de 10 anos</font>
+                                            <font size="3" color="#00000" face="helvetica">Safra de 2021</font>
                                         </li>
                                         <li>
-                                            <font size="3" color="#00000" face="helvetica">etx</font>
+                                            <font size="3" color="#00000" face="helvetica">Região Vale do Loire</font>
                                         </li>
                                     </ul>
                                 </td>
@@ -167,8 +263,56 @@
                             </tr>
                         </table>
                 </td>
+                <td width="300px">
+                    <center>
+                        <img src="../imagens/vinho6.jpeg" width="350px" height="350px">
+                    </center>
+                </td>
+                <td>
+                    <font size="5" color="#000" face="helvetica">&nbsp&nbsp&nbspVinho Tinto Pinot Noir</font>
+                    <br>
+                    <font size="2" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspEm estoque</font>
+                    <br>
+                    <img src="../imagens/startsRating.jpeg" height="50px">
+                    <br>
+                    <font size="2" color="#00000" face="helvetica">&nbsp&nbsp&nbspDe: R$ 169,00</font>
+                    <br>
+                    <font size="4" color="#007600" face="helvetica">&nbsp&nbsp&nbsp&nbspPor: R$ 159,00</font>
+                    <br>
+                    <font size="1" color="#00000" face="helvetica">&nbsp&nbsp&nbsp&nbspA vista ou em até 3x sem juros</font>
+                    <br>
+                    <table border="10" bordercolor="white">
+                        <tr>
+                            <td>
+                                <font size="4" color="#00000" face="helvetica">Sobre esse vinho</font>
+                                <ul>
+                                    <li>
+                                        <font size="3" color="#00000" face="helvetica">Seco</font>
+                                    </li>
+                                    <li>
+                                        <font size="3" color="#00000" face="helvetica">Aroma herbáceo</font>
+                                    </li>
+                                    <li>
+                                        <font size="3" color="#00000" face="helvetica">Safra 2020</font>
+                                    </li>
+                                    <li>
+                                        <font size="3" color="#00000" face="helvetica">Região Serra Gaúcha</font>
+                                    </li>
+                                </ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <button>
+                                    <font size="5" color="#007600" face="helvetica">Comprar</font>
+                                </button>
+                            </td>
+                        </tr>
+                    </table>
+            </td>
             </tr>
         </table>
+    
     </center>
 
 
