--- a/projeto/src/Index.html
+++ b/projeto/src/Index.html
@@ -9,7 +9,7 @@
 <body>
     <center>
         <a href="./pages/paginaPrincipal.html"><img src="./imagens/logo.jpg" width="600px" height="600px"></a>
-        <h1><a href="./pages/paginaPrincipal.html"><font color="#5e2129">Vinheria Agnello</font></a></h1>
+        <h1><a href="./pages/paginaPrincipal.html"><font color="#5e2129" face = "helvetica">Vinheria Agnello</font></a></h1>
     </center>   
 </body>
 </html>
